default entrance is list_view in task && project.

--- a/tpl/admin/header.htm
+++ b/tpl/admin/header.htm
@@ -92,7 +92,7 @@
                         </div>
                         </li>
                         -->
-                        <li><a href="?admin/project/index"><i class="fa fa-tasks fa-fw"></i> 任务管理</a></li>
+                        <li><a href="?admin/project/index&flag=1"><i class="fa fa-tasks fa-fw"></i> 任务管理</a></li>
                         <li><a href="?admin/sheet/index"><i class="fa fa-edit fa-fw"></i> 调查结果</a></li>
                         <li><a href="?admin/investigator/index"><i class="fa fa-users fa-fw"></i> 调查员信息</a></li>
                         <li><a href="https://mpkf.weixin.qq.com/" target='_blank'><i class="fa fa-weixin fa-fw"></i> 客服功能</a></li>
