--- a/tpl/admin/task/index.htm
+++ b/tpl/admin/task/index.htm
@@ -4,6 +4,7 @@
     <a href='?admin/task/index&projectmuffinid={:$muffinid}&flag=1'><span class='fa fa-list'></a>
     <a href='?admin/task/index&projectmuffinid={:$muffinid}&flag=0'></span><span class='fa fa-image'></span></a> 
     <a href='?admin/task/new&muffinid={:$muffinid}'><button class='btn btn-success' style='display:inline-block; float: right;'>新建任务</button></a>
+    <a href='?admin/task/import&muffinid={:$muffinid}'><button class='btn btn-success' style='display:inline-block; float: right; margin-right: 15px;'>批量导入任务</button></a>
     </h3>
     <hr>
     <?php
