get adcode from import task file.

--- a/tpl/admin/task/import.htm
+++ b/tpl/admin/task/import.htm
@@ -2,4 +2,8 @@
     点击上传导入文件<input type='file' id='input_file_btn' value='' ><br>
     <div class='import_data_show'></div>
 </div>
-  
+
+<script>
+var baiduak = "{=$baiduak}"; 
+//var baiduak = "NFyU53tCdkugjUewGq8Qy1kkXegmB79e"; 
+</script>
