增加量表,滑块,填空内容,修正答卷页面问题

--- a/tpl/admin/header.htm
+++ b/tpl/admin/header.htm
@@ -18,6 +18,7 @@
         
         <link rel="stylesheet" href="[:app]/css/main.css">
         <link rel="stylesheet" href="[:app]/css/modify-on-click.css">
+        <link rel="stylesheet" href="[:app]/css/jquery.raty.css">
 
         <script src="[:vendor]/jquery/jquery-2.1.1.min.js"></script>
         <script src="[:vendor]/bootstrap/js/bootstrap.min.js"></script>
@@ -35,6 +36,7 @@
         <script src="[:app]/js/picservice.js"></script>
         <script src="[:app]/js/calendar.js"></script>
         <script src="[:app]/js/modify-on-click.js"></script>
+        <script src="[:app]/js/jquery.raty.js"></script>
 
         <title> 预约系统 </title>
     </head>
