--- a/tpl/wechat/index/sheet.htm
+++ b/tpl/wechat/index/sheet.htm
@@ -69,7 +69,22 @@
         </div>
         <div class="wx_row_item bottom_area">
             <button type="button" class="btn btn-default" v-on:click="goBack()">返回</button>
-            <button type="button" class="btn btn-primary" v-on:click="sumbitSheet()">提交</button>
+            <button type="button" class="btn btn-primary" v-on:click="showSumbitSheetModal()">提交</button>
+        </div>
+        <!-- 提交任务提示框 -->
+        <div class="modal" id="submit_sheet_modal" tabindex="-1" role="dialog" data-backdrop="static">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-body" style="padding-top: 1.5em;">
+                        <strong style="font-size: 1.5em;">确认提交任务？</strong>
+                        <p style="margin-top: 1em;">提交任务之后将无法继续修改，请等待审核</p>
+                    </div>
+                    <div class="modal-footer flex-item flex-row" style="width: 100%; padding: 0px; text-align: center;">
+                        <div class="modal-footer-btn modal-footer-left_btn" id="submit_sheet_cancel" data-dismiss="modal">取消</div>
+                        <div class="modal-footer-btn modal-footer-right_btn text-primary" id="submit_sheet_submit" v-on:click="sumbitSheet()">提交</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -107,6 +122,21 @@
             <div class="modal-footer flex-item flex-row" style="width: 100%; padding: 0px; text-align: center;">
                 <div class="modal-footer-btn modal-footer-left_btn" id="modify_photo_cancel" data-dismiss="modal">取消</div>
                 <div class="modal-footer-btn modal-footer-right_btn" id="modify_photo_submit" v-on:click="modifyPhotoContent()">修改</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 删除卡片提示框 -->
+<div class="modal" id="delete_photo_modal" tabindex="-1" role="dialog" data-backdrop="static">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body" style="padding-top: 1.5em;">
+                <strong style="font-size: 1.5em; margin-bottom: 1em;">确认删除照片？</strong>
+            </div>
+            <div class="modal-footer flex-item flex-row" style="width: 100%; padding: 0px; text-align: center;">
+                <div class="modal-footer-btn modal-footer-left_btn" id="delete_photo_cancel" data-dismiss="modal">取消</div>
+                <div class="modal-footer-btn modal-footer-right_btn text-danger" id="delete_photo_submit" v-on:click="deletePhoto()">删除</div>
             </div>
         </div>
     </div>
