update some css with questionnaire

--- a/tpl/admin/questionnaire/edit.htm
+++ b/tpl/admin/questionnaire/edit.htm
@@ -1,4 +1,5 @@
 
+<div id="page-wrapper">
 	<div class="container">
 		<h1><?php if(empty($questionnaire->title())) echo "新建内容";else echo $questionnaire->title(); ?></h1>
 		<div class="row">
@@ -176,6 +177,7 @@
 			</div>
 		</div>
 	</div>
+</div>
 	<script type="text/javascript">
 		$(function() {
 			//			$('#myTab li:eq(1) a').tab('show');
