--- a/tpl/admin/header.htm
+++ b/tpl/admin/header.htm
@@ -99,9 +99,24 @@
                         <li><a href="?admin/investigator/index"><i class="fa fa-users fa-fw"></i> 调查员信息</a></li>
                         <li><a href="https://mpkf.weixin.qq.com/" target='_blank'><i class="fa fa-weixin fa-fw"></i> 客服功能</a></li>
                         <li><a href="?admin/system/settings"><i class="fa fa-fw fa-wrench "></i> 系统设置</span></a></li>
-                        <li><a href="?admin/questionnaire/index"><i class="fa fa-questions fa-fw"></i> 问卷管理</a></li>
+                        <li>
+                            <a href="#"><i class="fa  fa-sitemap fa-fw"></i> 问卷管理<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level collapse">
+                                <li>
+                                    <a href="?admin/questionnaire/index">问卷列表</a>
+                                </li>
+                                <li>
+                                    <a href="?admin/questionnaire/answerList">结果管理</a>
+                                </li>
+                                <li>
+                                    <a href="?admin/questionnaire/answer&id=1">添加测试</a>
+                                </li>
+                            </ul>
+                            <!-- /.nav-second-level -->
+                        </li>
+                        <!--<li><a href="?admin/questionnaire/index"><i class="fa fa-questions fa-fw"></i> 问卷管理</a></li>
                         <li><a href="?admin/questionnaire/answerList"><i class="fa fa-answers fa-fw"></i> 结果管理</a></li>
-                        <li><a href="?admin/questionnaire/answer&id=1"><i class="fa fa-answers fa-fw"></i> 添加测试</a></li>
+                        <li><a href="?admin/questionnaire/answer&id=1"><i class="fa fa-answers fa-fw"></i> 添加测试</a></li>-->
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
