--- a/tpl/admin/questionnaire/answerList.htm
+++ b/tpl/admin/questionnaire/answerList.htm
@@ -1,7 +1,7 @@
 
 <div id="page-wrapper">
     <div class="clear">
-    <h3>问卷列表
+    <h3>问卷列表</h3>
     <hr>
     <table class='table table-condensed' id='projects_table'>
       <thead><tr>
