--- a/tpl/admin/questionnaire/index.htm
+++ b/tpl/admin/questionnaire/index.htm
@@ -1,7 +1,6 @@
 <div id="page-wrapper">
     <div class="clear">
-    <h3>问卷列表
-<a href='?admin/questionnaire/new'><button class='btn btn-success' style='display:inline-block; float: right;'>新建任务</button></a>
+    <h3>问卷列表<a href='?admin/questionnaire/new'><button class='btn btn-success' style='display:inline-block; float: right;'>新建问卷</button></a></h3>
     <hr>
     <table class='table table-condensed' id='projects_table'>
       <thead><tr>
