--- a/tpl/admin/questionnaire/new.htm
+++ b/tpl/admin/questionnaire/new.htm
@@ -21,7 +21,7 @@
 			<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
 				<ul id="myTab" class="nav nav-tabs">
 					<li class="active"><a href="#home" data-toggle="tab">设计</a></li>
-					<li><a href="#view" data-toggle="tab">预览</a></li>
+					<li><a href="?admin/questionnaire/answer&id=<?php echo $questionnaire->id(); ?>" target="_blank">预览</a></li>
 				</ul>
 				<div id="myTabContent" class="tab-content">
 					<div class="tab-pane fade in active" id="home">
@@ -115,7 +115,7 @@
 			                        $(function() {
 				                        $("#star<?php echo $question['id']; ?>").raty({
 						                        hints: ["1", "2", "3", "4", "5"],
-						                        path:"/bigsword/yaan/images",
+						                        path:"[:app]/images",
 						                        click: function (score, evt) {
 						                        	alert("u selected "+score);
 					                        }
@@ -566,7 +566,7 @@
 				+' $(function() {'
 				+' $("#star1").raty({'
 				+' hints: ["1", "2", "3", "4", "5"],'
-				+' path:"/bigsword/yaan/images",'
+				+' path:"[:app]/images",'
 				+' click: function (score, evt) {'
 				+' alert("u selected "+score);'
 				+' }'
@@ -599,7 +599,7 @@
 						+' $(function() {'
 						+' $("#star'+datastr+'").raty({'
 						+' hints: ["1", "2", "3", "4", "5"],'
-						+' path:"/bigsword/yaan/images",'
+						+' path:"[:app]/images",'
 						+' click: function (score, evt) {'
 						+' alert("u selected "+score);'
 						+' }'
@@ -1028,7 +1028,7 @@
 		$(function() {
 			$('#star').raty({
 				hints: ['2', '4', '6', '8', '10'],
-				path:"/bigsword/yaan/images",
+				path:"[:app]/images",
 				click: function (score, evt) {
 					alert('u selected '+score);
 				}
