added cache questionnaire, added is_upload option in questions.

--- a/tpl/admin/questionnaire/index.htm
+++ b/tpl/admin/questionnaire/index.htm
@@ -1,4 +1,10 @@
 <div id="page-wrapper">
+    <?php
+    
+    //var_dump($_SESSION);
+    //var_dump($userid);
+    
+    ?>
     <div class="clear">
     <h3>问卷列表<a href='?admin/questionnaire/new'><button class='btn btn-success' style='display:inline-block; float: right;'>新建问卷</button></a></h3>
     <hr>
