--- a/tpl/admin/questionnaire/edit.htm
+++ b/tpl/admin/questionnaire/edit.htm
@@ -1,7 +1,7 @@
 
 <div id="page-wrapper">
-	<div class="container">
-		<h1><?php if(empty($questionnaire->title())) echo "新建内容";else echo $questionnaire->title(); ?></h1>
+	<div class="container-fluid">
+		<h1 class='text-center'><?php if(empty($questionnaire->title())) echo "新建内容";else echo $questionnaire->title(); ?></h1>
 		<div class="row">
 			<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 				<div class="btn-group-vertical">
