--- a/tpl/admin/questionnaire/edit.htm
+++ b/tpl/admin/questionnaire/edit.htm
@@ -1,5 +1,10 @@
 
 <div id="page-wrapper">
+<?php
+//var_dump($questionoptions);
+//var_dump($questions);
+
+?>
 	<div class="container-fluid">
 		<h1 class='text-center'><?php if(empty($questionnaire->title())) echo "新建内容";else echo $questionnaire->title(); ?></h1>
 		<div class="row">
@@ -47,7 +52,7 @@
 								<label id='title' for="name"><?php echo $question['title']; ?></label>
 								<label id='notes' for="name"><?php echo $question['notes']; ?></label>
 								<label id='qid' for="name" style="display: none;"><?php echo $question['id']; ?></label>
-                                <span class='upload_flag'><?php echo $question['is_upload'] == 1 ? '需上传图片' : ''; ?></span>
+                                <span class='upload_flag'><?php echo $question['is_upload'] == 1 ? '需上传图片' : ''; ?></span><span class='parent_flag'><?php echo $question['is_parent'] ? '关联到选项：' . $questionoptions[$question['is_parent']]['title'] : ''; ?></span>
 								<div>
 						<?php
 							if (!empty($question['options'])) {
@@ -77,7 +82,7 @@
 									<label id='title' for="name"><?php echo $question['title']; ?></label>
 									<label id='notes' for="name"><?php echo $question['notes']; ?></label>
 									<label id='qid' for="name" style="display: none;"><?php echo $question['id']; ?></label>
-                                    <span class='upload_flag'><?php echo $question['is_upload'] == 1 ? '需上传图片' : ''; ?></span>
+                                    <span class='upload_flag'><?php echo $question['is_upload'] == 1 ? '需上传图片' : ''; ?></span><span class='parent_flag'><?php echo $question['is_parent'] ? '关联到选项：' . $questionoptions[$question['is_parent']]['title'] : ''; ?></span>
 									<div>
 						<?php
 							if (!empty($question['options'])) {
@@ -109,7 +114,7 @@
                                 <label id='title' for="name"><?php echo $question['title']; ?></label>
                                 <label id='notes' for="name"><?php echo $question['notes']; ?></label>
                                 <label id='qid' for="name" style="display: none;"><?php echo $question['id']; ?></label>
-                                <span class='upload_flag'><?php echo $question['is_upload'] == 1 ? '需上传图片' : ''; ?></span>
+                                <span class='upload_flag'><?php echo $question['is_upload'] == 1 ? '需上传图片' : ''; ?></span><span class='parent_flag'><?php echo $question['is_parent'] ? '关联到选项：' . $questionoptions[$question['is_parent']]['title'] : ''; ?></span>
                                 <div>
                                     <label class="radio-inline"><?php echo $question['value']; ?><div id="star<?php echo $question['id']; ?>" width="200"></div></label><label class="radio-inline">分</label>
                                 </div>
@@ -141,7 +146,7 @@
 									<label id='title' for="name"><?php echo $question['title']; ?></label>
 									<label id='notes' for="name"><?php echo $question['notes']; ?></label>
 									<label id='qid' for="name" style="display: none;"><?php echo $question['id']; ?></label>
-                                    <span class='upload_flag'><?php echo $question['is_upload'] == 1 ? '需上传图片' : ''; ?></span>
+                                    <span class='upload_flag'><?php echo $question['is_upload'] == 1 ? '需上传图片' : ''; ?></span><span class='parent_flag'><?php echo $question['is_parent'] ? '关联到选项：' . $questionoptions[$question['is_parent']]['title'] : ''; ?></span>
 									<div>
 										<?php $selectstar = json_decode($question['value'],1); ?>
                                     <label class="radio-inline"><?php echo $selectstar['selectstar']; ?><input type="range" name="selectrange" min="1" max="<?php echo $selectstar['setnumber']; ?>" /></label class="radio-inline"><label><?php echo $selectstar['setnumber']; ?>分</label>
@@ -163,7 +168,7 @@
 							<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
                                 <label id='title' for="name"><?php echo $question['title']; ?></label><input type="text" name="text" value="" />
                                 <label id='qid' for="name" style="display: none;"><?php echo $question['id']; ?></label>
-                                <span class='upload_flag'><?php echo $question['is_upload'] == 1 ? '需上传图片' : ''; ?></span>
+                                <span class='upload_flag'><?php echo $question['is_upload'] == 1 ? '需上传图片' : ''; ?></span><span class='parent_flag'><?php echo $question['is_parent'] ? '关联到选项：' . $questionoptions[$question['is_parent']]['title'] : ''; ?></span>
                                 <div>
                                     <label id='notes' for="name"><?php echo $question['notes']; ?></label>
                                 </div>
