header nav changed : only questionnaire list in nav. fixed bugs: questionnaire preview backbtn error .

--- a/tpl/admin/header.htm
+++ b/tpl/admin/header.htm
@@ -95,7 +95,8 @@
                         </li>
                         -->
                         <li><a href="?admin/project/index&flag=1"><i class="fa fa-tasks fa-fw"></i> 任务管理</a></li>
-                        <li>
+                        <li><a href="?admin/questionnaire/index"><i class="fa fa-tasks fa-fw"></i> 问卷管理</a></li>
+                        <!-- <li>
                             <a href="#"><i class="fa  fa-sitemap fa-fw"></i> 问卷管理<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level collapse">
                                 <li>
@@ -105,8 +106,8 @@
                                     <a href="?admin/questionnaire/answerList">答卷列表</a>
                                 </li>
                             </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
+                            /.nav-second-level 
+                        </li>-->
                         <li><a href="?admin/sheet/index"><i class="fa fa-edit fa-fw"></i> 调查结果</a></li>
                         <li><a href="?admin/investigator/index&flag=1"><i class="fa fa-users fa-fw"></i> 调查员信息</a></li>
                         <li><a href="https://mpkf.weixin.qq.com/" target='_blank'><i class="fa fa-weixin fa-fw"></i> 客服功能</a></li>
