--- a/tpl/admin/header.htm
+++ b/tpl/admin/header.htm
@@ -95,7 +95,7 @@
                         </li>
                         -->
                         <li><a href="?admin/project/index&flag=1"><i class="fa fa-tasks fa-fw"></i> 任务管理</a></li>
-                        <li><a href="?admin/questionnaire/index"><i class="fa fa-tasks fa-fw"></i> 问卷管理</a></li>
+                        <li><a href="?admin/questionnaire/index"><i class="fa fa-files-o fa-fw"></i> 问卷管理</a></li>
                         <!-- <li>
                             <a href="#"><i class="fa  fa-sitemap fa-fw"></i> 问卷管理<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level collapse">
