--- a/tpl/admin/project/new.htm
+++ b/tpl/admin/project/new.htm
@@ -77,7 +77,7 @@
           </div>
           
           <div class="form-group">
-            <label for="dropdownMenu2">请选择关联的问卷<span style='color: red;'>&nbsp*</span></label>
+            <label for="dropdownMenu2">请选择关联的问卷</label>
             <div class="dropdown">
               <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><?php echo $project->naire_is_valid() ? $project->naire()->title() : "选择问卷<span class='caret'></span>"; ?></button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
