添加修改图片备注功能

--- a/tpl/wechat/index/answer.htm
+++ b/tpl/wechat/index/answer.htm
@@ -136,7 +136,7 @@
     </div>
 
     <!-- 修改卡片提示框 -->
-    <!-- <div class="modal" id="modify_photo_modal" tabindex="-1" role="dialog" data-backdrop="static">
+    <div class="modal" id="modify_photo_modal" tabindex="-1" role="dialog" data-backdrop="static">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -152,7 +152,7 @@
                 </div>
             </div>
         </div>
-    </div>-->
+    </div>
 
     <!-- 删除卡片提示框 -->
     <div class="modal" id="delete_photo_modal" tabindex="-1" role="dialog" data-backdrop="static">
