添加动画效果

--- a/tpl/wechat/index/answer.htm
+++ b/tpl/wechat/index/answer.htm
@@ -78,16 +78,16 @@
             <p>资料加载中...</p>
         </div>
         <div class="wx_col_item card_book" style="display','flex">
-            <div class="alert alert-info card_book_alert uploading_alert hidden" role="alert" 
-            style="">
+            <div class="alert alert-info card_book_alert uploading_alert" role="alert" 
+             style="display: none;">
                 <i class="fa fa-upload" aria-hidden="true"></i>图片上传中，请稍后...
             </div>
-            <div class="alert alert-success card_book_alert upload_success_alert hidden" role="alert" 
-            style="">
+            <div class="alert alert-success card_book_alert upload_success_alert" role="alert" 
+             style="display: none;">
                 <i class="fa fa-check" aria-hidden="true"></i>讯息：图片上传成功！
             </div>
-            <div class="alert alert-danger card_book_alert upload_fail_alert hidden" role="alert" 
-            style="">
+            <div class="alert alert-danger card_book_alert upload_fail_alert " role="alert" 
+             style="display: none;">
                 <i class="fa fa-exclamation" aria-hidden="true"></i>错误：图片上传失败！
             </div>
             <div class="wx_row_item card_book_page">
